fix(modal):z-index-adjusted

--- a/src/pages/app/EventPage/EventPage.module.css
+++ b/src/pages/app/EventPage/EventPage.module.css
@@ -472,7 +472,7 @@
 
   margin-bottom: 1rem;
   position: absolute;
-  z-index: 100;
+  z-index: 10001;
   backdrop-filter: blur(800px);
 
   top: 50%;
